# BetakammerIKTP

./: BetaChamberSetup.cc  Cs_137_GSGS.csv  Cs_137_GsEs.csv  GNUmakefile  README.md  RunCalibration.c  TestFilerReading.c
Simulation/BetakammerSetup/: CMakeLists.txt  TestFilerReading_c.d  readme.md
Simulation/BetakammerSetup/Aufloesung/: AufloesungenDetector2.root
Simulation/BetakammerSetup/Scripte/: ExtractCalibration.c  ExtractHistogramm.cxx  ExtractHistogramm2.cxx  ExtractKalibrationsEnergien.c  ExtractSystematicsBismuthThickness.c  ExtractSystematicsSiliconThickness.c  ExtractUnfolding.c  ExtractUnfolding_Bismut.c  Run50muSiMessung.c  RunCalibration.c  RunKalibrationsEnergien.c  RunSystematicsBismuthThickness.c  RunSystematicsSiliconThickness.c  RunUnfolding.c  RunUnfolding_Bismut.c  RunUnfolding_Si31.c  TestDifferentExtraction4.cpp  TestDifferentExtraction5.cpp  Verschmierung.cpp
Simulation/BetakammerSetup/include/: BetaChamberAbsorberHit.hh  BetaChamberAbsorberSD.hh  BetaChamberActionInitialization.hh  BetaChamberAnalysis.hh  BetaChamberDetectorConstruction.hh  BetaChamberDetectorConstructionMessenger.hh  BetaChamberEventAction.hh  BetaChamberGeneratorDecay0.hh  BetaChamberGeneratorDecay0Interface.hh  BetaChamberGeneratorDecay0InterfaceMessenger.hh  BetaChamberGeneratorG4Gun.hh  BetaChamberGeneratorG4GunMessenger.hh  BetaChamberGeneratorReadSpectrumFile.hh  BetaChamberPhysicsList.hh  BetaChamberPositionSampler.hh  BetaChamberPrimaryGeneratorAction.hh  BetaChamberPrimaryGeneratorMessenger.hh  BetaChamberRunAction.hh  BetaChamberRunActionMessenger.hh  BetaChamberSiliconHit.hh  BetaChamberSiliconSD.hh  BetaChamberSteppingAction.hh  BetaChamberVGenerator.hh  LoggedSession.hh
Simulation/BetakammerSetup/macros/: AllCommands.mac  Decay0.mac  Decay0AT.mac  Decay0Si31.mac  DrawChamber.mac  Kalibration.mac  LoadCs137.mac  LoadMikkoSi31Spektrum.mac  init_vis.mac  vis.mac
Simulation/BetakammerSetup/macros/calibration/: Kalibrations_Position3_Cs137_Energie_624.2.mac  Kalibrations_Position3_Cs137_Energie_655.7.mac
Simulation/BetakammerSetup/src/: BetaChamberAbsorberHit.cc  BetaChamberAbsorberSD.cc  BetaChamberActionInitialization.cc  BetaChamberDetectorConstruction.cc  BetaChamberDetectorConstructionMessenger.cc  BetaChamberEventAction.cc  BetaChamberGeneratorDecay0.cc  BetaChamberGeneratorDecay0Interface.cc  BetaChamberGeneratorDecay0InterfaceMessenger.cc  BetaChamberGeneratorG4Gun.cc  BetaChamberGeneratorG4GunMessenger.cc  BetaChamberGeneratorReadSpectrumFile.cc  BetaChamberPhysicsList.cc  BetaChamberPositionSampler.cc  BetaChamberPrimaryGeneratorAction.cc  BetaChamberPrimaryGeneratorMessenger.cc  BetaChamberRunAction.cc  BetaChamberRunActionMessenger.cc  BetaChamberSiliconHit.cc  BetaChamberSiliconSD.cc  BetaChamberSteppingAction.cc  BetaChamberVGenerator.cc  LoggedSession.cc
